--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,34 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.14.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "from __future__ import absolute_import, division, print_function, unicode_literals, unicode_literals\n",
-    "\n",
-    "# tensorflow와 tf.keras를 임포트합니다\n",
-    "import tensorflow as tf\n",
-    "from tensorflow import keras\n",
-    "\n",
-    "# 헬퍼(helper) 라이브러리를 임포트합니다\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "print(tf.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,10 +10,7 @@
      "output_type": "stream",
      "text": [
       "(175, 64)\n",
-      "(175,)\n",
-      "Tensor(\"Reshape_5:0\", shape=(?, 8, 8, 1), dtype=float32)\n",
-      "Tensor(\"Placeholder_11:0\", shape=(?,), dtype=float32)\n",
-      "Tensor(\"strided_slice:0\", shape=(?, 8, 8, 1), dtype=float32)\n"
+      "(175,)\n"
      ]
     }
    ],
@@ -64,65 +34,11 @@
     "  return var\n",
     "#인풋 데이터 datin 변수에 로드, 아웃풋 데이터는 target 변수에 로드\n",
     "\n",
-    "\n",
     "datin = load_from_url('https://github.com/geonhong/mlcfd/blob/master/volfrac/samples/volfrac_data.npy?raw=true')\n",
     "target = load_from_url('https://github.com/geonhong/mlcfd/blob/master/volfrac/samples/volfrac_target.npy?raw=true')\n",
     "\n",
-    "dataset = datin\n",
-    "targets = target\n",
-    "\n",
-    "print(dataset.shape)\n",
-    "print(targets.shape)\n",
-    "\n",
-    "dataset = tf.placeholder(tf.float32, [None, 64])\n",
-    "dataset_img = tf.reshape(dataset, [-1, 8, 8, 1])\n",
-    "targets_img = tf.placeholder(tf.float32, [None,])\n",
-    "\n",
-    "\n",
-    "\n",
-    "print(dataset_img)\n",
-    "print(targets_img)\n",
-    "\n",
-    "print(dataset_img[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(?, 8, 8, 1)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'reshape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-41499144a175>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset_img\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdataset_img\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'Greys'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'reshape'"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "print(dataset_img.shape)\n",
-    "plt.figure()\n",
-    "plt.imshow(dataset_img.reshape(8,8), cmap='Greys')"
+    "print(datin.shape)\n",
+    "print(target.shape)"
    ]
   },
   {
@@ -130,7 +46,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#데이터셋 확인(2차원)\n",
+    "\n",
+    "plot_x = datin[]"
+   ]
   },
   {
    "cell_type": "code",
@@ -156,7 +78,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
